$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Security fix: Better cleansing of search.php 'adv' parameter
 - Security fix: do not allow certain HTML tags in event descriptions
   such as SCRIPT, META, LINK, OBJECT, APPLET and others.
 - Fix bug: set default translation to 'English-US.txt', which seems to
   avoid the "No such translation" error for some pages (icalclient.php).
 - Fix bug [ 1840084 ] 'External participants' is not at the left margin like
 - Apply PATCH [ 1836703 ] a few corrections to Italian.txt
 - Apply PATCH [ 1834400 ] some corrections to Italian.txt
 - Apply PATCH [ 1834285 ] All remaning items for Italian.txt
 - Partial fix bug [ 1832024 ] Notice: Undefined variable: LANGUAGE in /var/www/webcalendar/includes/translate.php
   (Forgot to set $LANGUAGE global in function translate.
    And, some things seem to be getting translated more than once.)
 - Add support for Czech UTF8
 - Fix bug [ 1830952 ] Cannot add events - Error, during execute Query
 - Fix bug [ 1737128 ] From notification to "not authorized"
 - Fix bug [ 1823063 ] CVS 1.1.7 - month /week view - no today color right of event
 - Fix bug [ 1829125 ] I can not add external calendars
 - Fix bug [ 1792313 ] Installation wizard step 1 shows wrong colors
 - Fix bug [ 1830446 ] Installation wizard will not be displayed in proper language
 - Fix bug [ 1829224 ] getPostVal fails on non-array
 - Fix bug [ 1827370 ] would not add multiple participants to event
 - Added ability to place page in more than one UAC 'page_lookup' group. We should be able to eliminate
   'page_lookup_ex' array eventually.
 - Fix bug [ 1828397 ] "you are not authorized" error
 - Fix bug [ 1828416 ] no pull-down entries for languages at 'preferences' and 'sys
 - Fix bug [ 1828232 ] Error after Login
 - Add capability to translate dates and numbers.
   In preparation for eliminating file 'includes/date_formats.php'.